# qlik

./: CMakeLists.txt  Packaging.cmake
client/: Accounts.cpp  Accounts.h  Accounts.ui  CMakeLists.txt  Client.cpp  Client.h  Client.ui  Connect.cpp  Connect.h  Connect.ui  Contact.cpp  Contact.h  Contact.ui  Create.cpp  Create.h  Create.ui  Credit.cpp  Credit.h  Credit.ui  Message.cpp  Message.h  Message.ui  Packaging.cmake  README  Service.cpp  Service.h  Service.ui  Socket.cpp  Socket.h  State.cpp  State.h  Stream.cpp  Stream.h  Web.cpp  Web.h  Web.ui  client.pro  client.rc  main.cpp
client/db/: install.sql  test.sql
client/doc/: client.dia
client/lang/: client_de.ts  client_en_US.ts  client_fr.ts
client/resources/: resources.qrc
client/resources/translations/: client_de.qm  client_de.ts  client_en_US.qm  client_en_US.ts  client_fr.qm  client_fr.ts
client/src/: About.cpp  About.h  About.ui  Accounts.cpp  Accounts.h  Accounts.ui  AccountsAdmin.cpp  AccountsAdmin.h  Action.cpp  Action.h  CMakeLists.txt  Client.cpp  Client.h  Client.ui  Connect.cpp  Connect.h  Connect.ui  Contact.cpp  Contact.h  Contact.ui  Create.cpp  Create.h  Create.ui  Credit.cpp  Credit.h  Credit.ui  Database.cpp  Database.h  Lang.cpp  Lang.h  Message.cpp  Message.h  Message.ui  News.cpp  News.h  News.ui  Options.cpp  Options.h  Service.cpp  Service.h  (+13 more)
client/ui/: About.ui  Accounts.ui  AccountsAdmin.ui  Client.ui  Connect.ui  Contact.ui  Create.ui  Lang.ui  Message.ui  News.ui  Options.ui  Service.ui  Stream.ui  Web.ui
client/unix/: client.pro
common/: Protocole.cpp  Protocole.h  Protocole.hpp
common/src/: Protocole.h
server/: Client.cpp  Client.h  Makefile  README  SQLiteWrapper.cpp  Server.cpp  Server.h  Service.cpp  Service.h  ServiceStream.cpp  ServiceStream.h  ServiceWeb.cpp  ServiceWeb.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  account.cfg  main.cpp  server.xml
server/db/: install.sql  server.db  test.sql
server/examples/: config.xml  daemon.xml  simple.xml
server/server/: IServerStream.h  SQLiteWrapper.cpp  SocketClient.cpp
server/src/: Action.cpp  Action.h  Apache.cpp  Apache.h  Client.cpp  Client.h  Config.cpp  Config.h  Credit.cpp  Credit.h  Database.cpp  Database.h  IServerFtp.h  IServerSql.h  IServerStream.h  IServerWeb.h  ISignalManager.h  IceCast.cpp  IceCast.h  Mysql.cpp  Mysql.h  Proftpd.cpp  Proftpd.h  Protocole.h  SQLiteWrapper.cpp  SQLiteWrapper.h  Select.cpp  Select.h  Server.cpp  Server.h  Service.cpp  Service.h  Signal.cpp  Signal.h  Singleton.hpp  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  (+12 more)
server/unix/: Makefile
src/: Accounts.h  Connect.h  Create.h  Credit.cpp  Credit.ui  Database.h  Message.cpp  Options.ui  Singleton.hpp  Socket.h  State.h  Web.cpp  configure  main.cpp
src/server/: Apache.cpp  IServerWeb.h  State.h  main.cpp
