######################################################################################
### 1) Set the application properties
######################################################################################

# Checks cmake version compatibility
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(qlik)

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 0)
SET(PROJECT_VERSION_PATCH 0)
SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

######################################################################################


######################################################################################
### 2) Now where we go ?
######################################################################################

ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)

######################################################################################


######################################################################################
### 3) Include packaging
######################################################################################

INCLUDE(Packaging.cmake)

######################################################################################
